--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         map.on('load', function () {
             // Load the custom icon
-            map.loadImage('icons/art-gallery.svg', function (error, image) {
+            map.loadImage('art-gallery.png', function (error, image) {
                 if (error) throw error;
 
                 // Add the custom icon to the map style.
