--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                         layout: {
                             'icon-image': ['case',
                                 ['==', ['get', 'id'], selectedFeatureId], // Check if the feature ID matches the selected one
-                                'art-gallery-selected-icon', // Use the selected icon
-                                'art-gallery-icon' // Use the default icon
+                                'icons/art-gallery.png', // Use the selected icon
+                                'icons/art-gallery-yellow.png' // Use the default icon
                             ],
                             'icon-size': 0.5
                         }
