--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     source: 'publicArt',
                     filter: ['!', ['has', 'point_count']],
                     layout: {
-                        'icon-image': 'art-gallery-icon',
+                        'icon-image': image,
                         'icon-size': 1.2
                     }
                 });
