--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                             map.easeTo({
                                 center: features[0].geometry.coordinates,
-                                zoom: zoom
+                                zoom: zoom + 2
                             });
                         }
                     );
