--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                             ['zoom'],
                             10, 0.7, // default size at zoom level 10
                             18, 1.4   // increase size at zoom level 18
-                        ]
+                        ],
+                        'icon-allow-overlap': true
                     }
                 });
 
