--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         const map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/jonathanwestberry/clt9l2gw600k501o84gvj0ajk',
-            center: [-123.1207, 49.282], // Vancouver
+            center: [-123.13175144144145,49.24551851296632, ], // Vancouver
             zoom: 11
         });
 
