--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     </style>
 </head>
 <body>
-    <div id="map" style="width: 100%; height: 100%;"></div>
+    <div id="map" style="
+        width: 100%; 
+        height: 100vh;"></div>
     <script>
         mapboxgl.accessToken = 'pk.eyJ1Ijoiam9uYXRoYW53ZXN0YmVycnkiLCJhIjoiY2x0OWR4Z3k4MGg2dTJpcDlwc2o0ZXFvayJ9.Muok1VdFLcaVekq6lWlzrA';
         const map = new mapboxgl.Map({
