--- a/index.html
+++ b/index.html
@@ -10,12 +10,30 @@
         .mapboxgl-popup-content:hover {
             cursor: pointer;
         }
+
+        #map {
+            width: 100%;
+            height: 70vh; /* Adjust the percentage based on your preference */
+        }
+
+        #map-title {
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        #data-source {
+            text-align: center;
+            font-size: 12px;
+            color: #666; /* Adjust the color as needed */
+        }
     </style>
 </head>
 <body>
-    <div id="map" style="
-        width: 100%; 
-        height: 100vh;"></div>
+    <div id="map-title">Vancouver Public Art Map</div>
+    <div id="map"></div>
+    <div id="data-source">Data Source: Your Data Source Here</div>
     <script>
         mapboxgl.accessToken = 'pk.eyJ1Ijoiam9uYXRoYW53ZXN0YmVycnkiLCJhIjoiY2x0OWR4Z3k4MGg2dTJpcDlwc2o0ZXFvayJ9.Muok1VdFLcaVekq6lWlzrA';
         const map = new mapboxgl.Map({
