--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <div id="map-title">Vancouver Public Art Map</div>
     <div id="map"></div>
-    <div id="data-source">Data Source: Your Data Source Here</div>
+    <div id="data-source">Data Source: https://opendata.vancouver.ca/explore/dataset/public-art/, https://opendata.vancouver.ca/explore/dataset/public-art-artists/</div>
     <script>
         mapboxgl.accessToken = 'pk.eyJ1Ijoiam9uYXRoYW53ZXN0YmVycnkiLCJhIjoiY2x0OWR4Z3k4MGg2dTJpcDlwc2o0ZXFvayJ9.Muok1VdFLcaVekq6lWlzrA';
         const map = new mapboxgl.Map({
