--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         #map {
             width: 100%;
-            height: 70vh; /* Adjust the percentage based on your preference */
+            height: 90vh; /* Adjust the percentage based on your preference */
         }
 
         #map-title {
@@ -31,9 +31,9 @@
     </style>
 </head>
 <body>
-    <div id="map-title">Vancouver Public Art Map</div>
+    <div id="map-title">Exploring Public Art in Vancouver</div>
     <div id="map"></div>
-    <div id="data-source">Data Source: https://opendata.vancouver.ca/explore/dataset/public-art/, https://opendata.vancouver.ca/explore/dataset/public-art-artists/</div>
+    <div id="data-source">Data Sources: https://opendata.vancouver.ca/explore/dataset/public-art/, https://opendata.vancouver.ca/explore/dataset/public-art-artists/</div>
     <script>
         mapboxgl.accessToken = 'pk.eyJ1Ijoiam9uYXRoYW53ZXN0YmVycnkiLCJhIjoiY2x0OWR4Z3k4MGg2dTJpcDlwc2o0ZXFvayJ9.Muok1VdFLcaVekq6lWlzrA';
         const map = new mapboxgl.Map({
