--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="map"></div>
     <div id="data-source">Data Sources: https://opendata.vancouver.ca/explore/dataset/public-art/, https://opendata.vancouver.ca/explore/dataset/public-art-artists/</div>
     <script>
-        mapboxgl.accessToken = 'pk.eyJ1Ijoiam9uYXRoYW53ZXN0YmVycnkiLCJhIjoiY2x0OWR4Z3k4MGg2dTJpcDlwc2o0ZXFvayJ9.Muok1VdFLcaVekq6lWlzrA';
+        mapboxgl.accessToken = 'pk.eyJ1Ijoiam9uYXRoYW53ZXN0YmVycnkiLCJhIjoiY202dTNwODAyMGFzejJrcTQ1ZHZuN3hkMiJ9._qgwvbFblwbJ10bCAYpoBw';
         const map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/jonathanwestberry/clt9l2gw600k501o84gvj0ajk',
